database/_slot_values_with_subject.txt
[eval]:11
      lines.push('(' + classId + ',' + subj + ',\\'' + day + '\\',\\'' + st + '\\',\\'' + en + '\\')');
                                              ^^^^^

SyntaxError: missing ) after argument list
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.17.0
